--- a/ReenbitTest.UI/Components/AddUserToChatDialog.razor
+++ b/ReenbitTest.UI/Components/AddUserToChatDialog.razor
@@ -5,7 +5,7 @@
 @inject IAuthService AuthService
 @inject ISnackbar Snackbar
 
-<MudDialog DisableSidePadding="true" Class="chat-info-dialog rounded-12">
+<MudDialog Class="chat-info-dialog rounded-12">
     <TitleContent>
         <MudText Typo="Typo.h5" Class="px-4 pt-4 pb-2">Chat Information</MudText>
     </TitleContent>
