--- a/ReenbitTest.UI/Components/NewChatDialog.razor
+++ b/ReenbitTest.UI/Components/NewChatDialog.razor
@@ -5,7 +5,7 @@
 @inject IAuthService AuthService
 @inject ISnackbar Snackbar
 
-<MudDialog ClassContent="pa-4" Style="border-radius: 12px;">
+<MudDialog Style="border-radius: 12px;">
     <TitleContent>
         <MudText Typo="Typo.h6" Color="Color.Primary" Class="mb-2">Create New Chat</MudText>
     </TitleContent>
