--- a/ReenbitTest.UI/Components/ChatsComponent.razor
+++ b/ReenbitTest.UI/Components/ChatsComponent.razor
@@ -78,16 +78,22 @@
                                 }
                             </div>
                             
-                            <MudText Typo="Typo.caption" Class="mud-text-truncate" Style="opacity: 0.7;">
-                                @if (typingUsersInChat.Count > 0)
-                                {
+                            @if (typingUsersInChat.Count > 0)
+                            {
+                                <MudText Typo="Typo.caption" 
+                                         Class="mud-text-truncate font-italic" 
+                                         Color="Color.Secondary">
                                     @GetTypingText(typingUsersInChat)
-                                }
-                                else
-                                {
+                                </MudText>
+                            }
+                            else
+                            {
+                                <MudText Typo="Typo.caption" 
+                                         Class="mud-text-truncate" 
+                                         Style="opacity: 0.7;">
                                     @GetLastMessagePreview(chat)
-                                }
-                            </MudText>
+                                </MudText>
+                            }
                         </div>
                     </div>
                 </MudListItem>
